--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^1.0.0-next.18",
 		"@sveltejs/kit": "^1.0.0-next.164",
+		"autoprefixer": "^10.3.4",
 		"svelte": "^3.42.0"
 	},
 	"dependencies": {
