--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,11 @@
 {
 	"useTabs": true,
 	"singleQuote": true,
-	"printWidth": 100
+	"printWidth": 100,
+	"arrowParens": "always",
+	"bracketSpacing": true,
+	"embeddedLanguageFormatting": "auto",
+	"jsxSingleQuote": false,
+	"tabWidth": 2,
+	"svelteAllowShorthand": true
 }
