--- a/cultcms/package.json
+++ b/cultcms/package.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "@sanity/base": "^2.17.2",
+    "@sanity/cli": "^2.18.0",
     "@sanity/components": "^2.14.0",
     "@sanity/core": "^2.17.2",
     "@sanity/default-layout": "^2.17.2",
