Event accumulation logic

--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
 		"preview": "svelte-kit preview"
 	},
 	"devDependencies": {
+		"@sanity/client": "^2.18.0",
+		"@sanity/image-url": "^1.0.1",
 		"@sveltejs/adapter-static": "^1.0.0-next.18",
 		"@sveltejs/kit": "^1.0.0-next.164",
 		"autoprefixer": "^10.3.4",
+		"dotenv": "^10.0.0",
+		"node-fetch": "^3.0.0",
 		"svelte": "^3.42.0"
 	},
 	"dependencies": {
