--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
 		"@sveltejs/kit": "^1.0.0-next.170",
 		"autoprefixer": "^10.3.5",
 		"dotenv": "^10.0.0",
-		"node-fetch": "^3.0.0",
+		"node-fetch": "^3.0.0",	
 		"svelte": "^3.42.6"
 	},
 	"dependencies": {
+		"@mdi/js": "^6.1.95",
 		"lazysizes": "^5.3.2"
 	}
 }
