--- a/cultcms/package.json
+++ b/cultcms/package.json
@@ -24,7 +24,8 @@
     "@sanity/vision": "^2.17.2",
     "prop-types": "^15.7",
     "react": "^17.0",
-    "react-dom": "^17.0"
+    "react-dom": "^17.0",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@sanity/types": "^2.17.1"
